Bug 383445 - c++ methods are not imported if class is defined outside name space
Summary: c++ methods are not imported if class is defined outside name space
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 2.22.3 (KDE Applications 17.04.3)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-13 08:26 UTC by Ralf Habacker
Modified: 2017-08-13 08:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.23.0 (KDE Applications 17.08.0)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2017-08-13 08:26:11 UTC
Daniele E. Domenichelli reported the following bug: 

The problem is that the classes are generated, but the methods are not imported for example see the difference in the classes foo and bar generated by this:

---
namespace test {
class foo;

class bar
{
    bar();
};

} // namespace test

class test::foo
{
    test();
};
---
Comment 1 Ralf Habacker 2017-08-13 08:34:41 UTC
Git commit 3bf9ace74540cc73073674cb54c88976c0eb8705 by Ralf Habacker.
Committed on 13/08/2017 at 08:34.
Pushed by habacker into branch 'Applications/17.08'.

Fix 'c++ methods are not imported if class is defined outside name space'

FIXED-IN:2.23.0 (KDE Applications 17.08.0)

M  +4    -5    umbrello/codeimport/import_utils.cpp
M  +17   -3    umbrello/codeimport/kdevcppparser/cpptree2uml.cpp
M  +4    -5    umbrello/model_utils.cpp

https://commits.kde.org/umbrello/3bf9ace74540cc73073674cb54c88976c0eb8705