Fix 'c++ methods are not imported if class is defined outside name space'

FIXED-IN:2.23.0 (KDE Applications 17.08.0)
BUG:383445